--- a/app/views/members/refund.html.erb
+++ b/app/views/members/refund.html.erb
@@ -1,19 +1,13 @@
-<h1> <%= @current_membercurrent_member.visible_id %> - <%= @current_member.full_name %></h1>
+<h1> Refund for <%= @current_membercurrent_member.visible_id %> - <%= @current_member.full_name %></h1>
+
 <table class="table table-bordered">
-  <tr>
-    <td> <%= t('activerecord.attributes.operation.operation_date') %>: <%= @operation.operation_date %></td>
-  </tr>
-  <tr> 
-    <td> <%= t('activerecord.attributes.operation.description') %>: <%= @operation.description %> </td>
-    <td> <%= t('activerecord.attributes.operation.created_by') %>: <%= @operation.created_by.username %> </td>
-  </tr>
-  <%= form_for @operation, :as => :operation, :url => operation_path(:id => @operation), do |f|%>
+  <% form_tag(member_refund_path(:transaction_id => @transaction)) do %>
     <tr> 
       <tr>
-        <td colspan="2"> <%= f.text_area :notes, :value => @operation.notes, :size=> "100x18"  %> </td>
+        <td>Amount to refund <%= text_field_tag :refund_amount %> </td>
       </tr>
       <tr>
-        <td colspan="2"> <%= f.submit nil, :class => 'btn btn-primary' %>
+        <td> <%= f.submit nil, :class => 'btn btn-primary' %>
              <%= link_to t(:Cancel), member_path(:id => @current_member.visible_id), :class => 'btn' %> </td>
       </tr>
     </tr> 
