Changed @member for @current_member. Added validation and setter on app controller for @current_member

--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -14,7 +14,7 @@
         <%= I18n.l operation.operation_date, :format => :long %>
       </td>  
       <td>
-        <%= link_to operation.description.truncate(50), operation_path(@current_partner.prefix,@current_club.name,@member.visible_id,:id => operation.id) %>
+        <%= link_to operation.description.truncate(50), operation_path(@current_partner.prefix,@current_club.name,@current_member.visible_id,:id => operation.id) %>
       </td>
       <td>
         <%= operation.notes.truncate(30) if operation.notes != nil %> 
