--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -14,8 +14,8 @@
       <%= t('activerecord.attributes.credit_card.expire_date') %>: <%= cc.expire_month %> / <%= cc.expire_year %>
     </td>
     <td>
-      <%= link_to 'BlackList', '#', :class => "btn btn-warning" %>
-      <%= link_to 'Activate', '#', :class=> "btn btn-warning" if !cc.active%>
+      <%= link_to 'BlackList', '#', :class => "btn btn-warning confirm" %>
+      <%= link_to 'Activate', '#', :class=> "btn btn-warning confirm" if !cc.active%>
     </td>
   </tr>
   <% end %>
