--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -13,9 +13,12 @@
       <td> <%= cc.number %> </td>
       <td> <%= cc.expire_month %> / <%= cc.expire_year %> </td>
       <td>
-       <!-- estos botones tienen que hacer un POST (usar form) -->
-        <%= link_to 'BlackList', credit_card_set_as_blacklisted_path(:credit_card_id => cc.id), :class => "btn btn-warning confirm" %>
-        <%= link_to 'Activate', credit_card_activate_path(:credit_card_id => cc.id), :class=> "btn btn-warning confirm" unless cc.active%>
+        <%= form_for @cc, :as => :credit_card, :url => credit_card_set_as_blacklisted_path(:credit_card_id => cc.id), do |f|  %> 
+          <%= submit_tag 'BlackList', :name => 'blacklist', :class=> "btn btn-warning confirm" %>
+        <% end %>
+        <%= form_for @cc, :as => :credit_card, :url => credit_card_activate_path(:credit_card_id => cc.id), do |f| %>
+          <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm" unless cc.active %>
+        <% end %>
       </td>
     </tr>
   </tbody>
