refs #18816 - 1 transaction has the refunded amount. We wont allow to refund $ more than the one billed. We can allow someone to do partials refunds. Needs unit testing.

--- a/app/views/members/_transactions.html.erb
+++ b/app/views/members/_transactions.html.erb
@@ -10,13 +10,13 @@
       <%= l(transaction.created_at) %>
     </td>
     <td>
-      <%= link_to transaction.response_result[0..50], "#" %>
+      <%= transaction.to_label %>
     </td>
     <td>
       <%= number_to_currency transaction.amount %>
     </td>
     <td>
-      <%= link_to("Refund", member_refund_path(:transaction_id => transaction.id), :class => "btn btn-warning") if transaction.sale? %>
+      <%= link_to("Refund", member_refund_path(:transaction_id => transaction.id), :class => "btn btn-warning") if transaction.can_be_refunded? %>
     </td>
   </tr>
   <% end %>
