--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -17,7 +17,7 @@
 	  </tr>
 	  <tr>
 	    <td colspan="2"> <%= f.submit nil, :class => 'btn btn-primary' %>
-	         <%= link_to t(:Cancel), show_member_path(:id => @current_member.visible_id), :class => 'btn' %> </td>
+	         <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </td>
 	  </tr>
 	</tr> 
     <% end%>
