--- a/app/views/admin/agents/index.html.erb
+++ b/app/views/admin/agents/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Agent.new.class -%>
 <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-<table class="table table-striped">
+<table class="table table-striped datatable">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
@@ -35,7 +35,7 @@
   </tbody>
 </table>
 
-<%= will_paginate @agents %>
+
 
 <%= link_to t(:new),
             new_admin_agent_path,
