Added partial for member information. This is to use on views that we call from member show.

--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -1,8 +1,6 @@
+<%= render :partial => "shared/member_information" %>
+
 <table class="table table-bordered">
-	<tr>
-		<td> <%= t('member') %>: <%= @current_member.first_name %> <%= @current_member.last_name %> </td>
-		<td> <%= t('activerecord.attributes.member.visible_id') %>: <%= @current_member.visible_id %> </td>
-	<tr>
 	<tr>
 	  <td colspan="2"> <%= t('activerecord.attributes.operation.operation_date') %>: <%= @operation.operation_date %></td>
 	</tr>
