--- a/app/views/members/refund.html.erb
+++ b/app/views/members/refund.html.erb
@@ -6,7 +6,7 @@
       <td>Amount to refund (e.g.: $45.34)<%= text_field_tag :refund_amount %> </td>
     </tr>
     <tr>
-      <td> <%= submit_tag "Guardar", :class => 'btn btn-primary' %>
+      <td>  <%= submit_tag t(:save), :class => 'btn btn-primary' %>
            <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
