Changes need it after reading -again- the billing user stories doc.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -58,7 +58,7 @@
          <%= I18n.l @current_member.join_date, :format => :long %> </td>
   </tr>
   <tr>
-    <td> <%= t('activerecord.attributes.member.next_bill_date') %>: <%= @current_member.bill_date %> </td>
+    <td> <%= t('activerecord.attributes.member.next_bill_date') %>: <%= @current_member.next_retry_bill_date %> </td>
     <td colspan="2"> <%= t('activerecord.attributes.member.cancel_date') %>: 
                      <%= I18n.l @current_member.cancel_date, :format => :long if @current_member.cancel_date != nil %> </td>
   </tr>
