--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -51,7 +51,16 @@
     </tr>
   </thead>  
   <tr>
-    <td> <%= t('activerecord.attributes.member.current_status') %>: <%= @current_member.status %> </td>
+  <td 
+  <% if @current_member.provisional? %>
+    class="provisional"
+    <% elsif @current_member.lapsed? %>
+    class="lapsed"
+    <% elsif @current_member.paid? %>
+    class="paid"
+    <%end%>
+  > 
+         <%= t('activerecord.attributes.member.current_status') %>: <%= @current_member.status %> </td>
     <td> <%= t('activerecord.attributes.member.member_since_date') %>: 
          <%= I18n.l @current_member.created_at, :format => :long%> </td>
     <td> <%= t('activerecord.attributes.member.join_date') %>: 
