--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -58,8 +58,10 @@
   </tr>
   <tr>
     <td> <%= t('activerecord.attributes.member.next_retry_bill_date') %>: <%= @current_member.next_retry_bill_date %> </td>
-    <td colspan="2"> <%= t('activerecord.attributes.member.cancel_date') %>: 
-                     <%= I18n.l @current_member.cancel_date, :format => :long if @current_member.cancel_date != nil %> </td>
+    <td colspan="2">
+      <%= t('activerecord.attributes.member.cancel_date') %>: 
+      <%= I18n.l(@current_member.cancel_date, :format => :long) unless @current_member.cancel_date.nil? %>
+    </td>
   </tr>
 </table>
 
