Added feature datepicker for cancelation date

--- a/app/views/members/cancel.html.erb
+++ b/app/views/members/cancel.html.erb
@@ -5,18 +5,14 @@
     <tr>
       <td>
         <%= label :cancel_date, t('activerecord.attributes.member.cancel_date'), :class => 'help-inline' %> 
-        <%= text_field_tag :cancel_date %> 
+        <%= text_field_tag :cancel_date, nil ,:class => 'datepicker' %> 
       </td>
     </tr>
     <tr>
-      <td> <%= submit_tag t(:save), :class => 'btn btn-primary' %>
+      <td> <%= submit_tag t(:save), :class => 'btn btn-primary re-confirm' %>
            <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
+<p>Date: <input type="text" id="datepicker"></p>
 
-<script>
-$(function (){
-  $('#cancel_date').datepicker();
-});
-</script>
