Fixed new/edit features

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -42,7 +42,7 @@
     </td>
   </tr>  
 
-  <% if @current_member.new_record? %>
+  <% if @member.new_record? %>
     <tr class="control-group" >
       <td colspan="2"> 
         <%= f.label :terms_of_membership_id, t('activerecord.attributes.member.terms_of_membership_id'), :class => 'help-inline' %> 
@@ -63,7 +63,7 @@
         <%= text_field :credit_card, :expire_year, :class => 'text_field input-small' %>
       </td>
     </tr>
-  </tr> 
+  </tr>
   <% end %>
   
   <tr class="control-group">
@@ -72,7 +72,7 @@
   </tr>
 </table>
 
-<% if @current_member.new_record? %>
+<% if @member.new_record? %>
   <%= hidden_field_tag :enrollment_amount, 0.0 %>
   <%= f.hidden_field :country, :value => "US" %>
 <% end %>
