--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -10,7 +10,6 @@
 
 <%= stylesheet_link_tag "application", :media => "all" %>
 
-<link href="/images/favicon.ico" rel="shortcut icon">
-<link href="/images/apple-touch-icon.png" rel="apple-touch-icon">
-<link href="/images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-<link href="/images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+<link href="/images/favicon.ico" rel="shortcut icon"/>
+
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css"/>
