Improved view of member status. Now it shows with colors.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,10 @@ form .clearfix:before, form .clearfix:after {
 	background-color: red;
 }
 
+.paid{
+	background-color: green;
+}
+
 .lapsed{
 	background-color: red;
 }
