--- a/app/views/members/_notes.html.erb
+++ b/app/views/members/_notes.html.erb
@@ -3,17 +3,26 @@
       <tr>
         <th colspan="2">Notes <%= link_to "Add a note", new_member_note_path, :class => "btn btn-warning" %></th>
       </tr>
-    </thead>   
     <tr>
+    </thead> 
     <% notes.each do |note| %>
-      <td>
-        <%= l(note.created_at) %>
-      </td>
-      <td>
-        <%= link_to note.description[0..50], "#" %>
-      </td>
-    </tr>
+    <table class="table table-bordered">
+      <tr>
+        <th>
+          <%= note.disposition_type if !note.disposition_type.nil? %> - 
+          <%= note.communication_type if !note.communication_type.nil? %>        
+          <%= t('added_by') %>
+          <%= note.created_by.username %>
+          <%= distance_of_time_in_words(note.created_at, Time.now, include_seconds = false, options = {}) %> ago
+        </th>
+      <tr style = 'height:auto; display:inline-block; word-wrap: break-word' >
+        <td>
+          <%= note.description %>
+        </td>
+      </tr>
+    </table>
     <% end %>
+  
 </table>
 
   <%= will_paginate notes %>
