--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -74,7 +74,7 @@
     </td>
   </tr>
   <tr>
-    <td colspan="4"> <%= t('term_of_membership') %> 
+    <td colspan="4"> <%= t('menu.activerecord.term_of_membership') %> 
          <%= t('activerecord.attributes.terms_of_membership.name') %>:
          <%= @current_member.terms_of_membership.name %> </td>
   </tr>
