--- a/app/views/domains/_form.html.erb
+++ b/app/views/domains/_form.html.erb
@@ -26,7 +26,7 @@
   <div class="control-group">
     <%= f.label :Club, :class => 'control-label' %>
     <div class="controls">
-      <% if @domain.club_id.nil? %>
+      <% if @domain.new_record? || (@domain.club.nil? && params[:action] = :edit) %>
         <%= generate_select_club_id f, @domain, @clubs %>
       <% else %>
         <%= @domain.club.name %>
