--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -26,7 +26,7 @@
   <tr>
     <td colspan="5"> 
       <i class ="icon-home" > </i> <%= @current_member.full_address %> 
-      <%= link_to t('show_on_map'), "http://maps.google.com/maps?f=q&q=#{h @current_member.full_address}&ie=UTF8&om=1", :target => '_blank' %>
+      <%= link_to t('show_on_map'), "http://maps.google.com/maps?f=q&q=#{h @current_member.full_address}&ie=UTF8&om=1", :target => '_blank', :class => "btn btn-info" %>
     </td>
   </tr>
 </table>
