ref#18537 - Fixed errors and traslations. Added validation too.

--- a/app/views/shared/_member_information.html.erb
+++ b/app/views/shared/_member_information.html.erb
@@ -1,6 +1,6 @@
 <table class="table table-bordered" >
   <tr>
  	<td> <%= t('activerecord.attributes.member.visible_id') %>: <%= @current_member.visible_id %> </td> 	
-	<td> <%= t('menu.activerecord.member') %>: <%= @current_member.first_name %> <%= @current_member.last_name %> </td>
+	<td> <%= t('activerecord.member') %>: <%= @current_member.first_name %> <%= @current_member.last_name %> </td>
   <tr>
 </table>
