--- a/app/views/member_notes/new.html.erb
+++ b/app/views/member_notes/new.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "shared/member_information" %>
 
- <%= form_for @member_note, :as => :member_note, :url => member_notes_path(:id => @member_notes), do |f|%>
+ <%= form_for @member_note, :as => :member_note, :url => member_notes_path(:id => @member_notes) do |f|%>
   <table class="table table-bordered">    
     <tr>
       <td> 
@@ -10,7 +10,7 @@
       </td>
     </tr>
     <tr>
-      <td> <%= f.text_area :description, :style => 'width: 99%; height: 200px' %> </td>
+      <td> <%= f.text_area :description, :style => 'width: 99%; height: 200px', :class => 'required' %> </td>
     </tr>
     <tr> <td> <%= link_to t(:back), :back, :class => 'btn' %> </td> </tr>
   </table>
